	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1571)
 * Command 'list' 'sort_var' 'var' to sort file list according to values of 'i:var'.
# (r1570)
 * Command 'list' 'sort_comment' to sort file list according to 'i:_comment' value.
# (r1564)
 * Added an --verbose-font-load switch to set _fbfont_verbosity=1.
# (r1563)
 * Variable '_fbfont_verbosity' sets verbose font loading.
# (r1561)
 * fix: short options -b, -h, -R were not getting optional argument (e.g. -b1).
# (r1559)
 * key combination C-r now assigned to "reload ''".
# (r1555)
 * fix: symbol from fbi sources clashed with gcc-6 onwards, breaking compilation.
# (r1544)
 * key combination C-w assigned to setting auto-scaling to width.
# (r1543)
 * smoother scroll of large images.
# (r1540,r1541)
 * if SSH_TTY set and no output device specified, will give precedence to aalib.
# (r1539)
 * bugfix: in --as-text will avoid repeated reload of file.
# (r1526)
 * Hardcoded font (if configured in) will serve as fallback font.
# (r1523)
 * Added an --no-pipe-load / -X switch to _no_external_loader_programs=1;
# (r1503)
 * description variables beginning with '_' will not go into i: .
# (r1502,r1504,r1580)
 * list 'vars|variables': list variables in all i:* read from description file.
# (r1499,r1506,r1567,r1568)
 * expansion of @variables and @# comments in read descriptions.
# (r1501)
 * The 'menu key' in SDL mode will show a temporary mouse click actions menu.
# (r1490,r1491)
 * bugfix: description file reading could crash due to wrong check.
# (r1485)
 * Caption of _caption_over_image will take at most half of the screen.
# (r1484)
 * If _caption_over_image=3, image will be possibly drawn below the caption.
# (r1480)
 * The 'v' and 'S' keys will redraw as well.
# (r1477,r1478)
 * Description line can be of any length (EXPERIMENTAL).
# (r1474)