@@ -1076,6 +1076,7 @@ namespace fim
 #define FIM_WANT_NOEXTPROPIPE 1 /* */
 /* #define FIM_WANT_CUSTOM_INFO_STRING  1 */
 #define FIM_WANT_CONSOLE_SWITCH_WHILE_LOADING defined(FIM_FRAMEBUFFER_DEVICE_H) && defined(FIM_WANT_FB_CONSOLE_SWITCH_WHILE_LOADING) /* only needed in Linux framebuffer device on computers loading files so slowly that we might want to switch console in between */
+#define FIM_WANT_RELOAD_ON_FILE_CHANGE 1 /* detect file change and reload */
 #define FIM_STREAM_BUFSIZE	16*4096
 #define FIM_MAXLINE_BUFSIZE	1024
 #define FIM_PRINTFNUM_BUFSIZE	32
